# CPyCppyy

./: .gitignore  BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.rst
.github/workflows/: MacOS.yml  Ubuntu.yml  Windows.yml  bazel.yml  ci.yml  emscripten.yml
include/CPyCppyy/: API.h
src/: API.cxx  CPPConstructor.cxx  CPPDataMember.cxx  CPPDataMember.h  CPPEnum.cxx  CPPExcInstance.h  CPPInstance.cxx  CPPInstance.h  CPPMethod.cxx  CPPMethod.h  CPPOverload.cxx  CPPOverload.h  CPPScope.cxx  CPPScope.h  CPyCppyyModule.cxx  CallContext.h  Converters.cxx  Converters.h  Cppyy.h  DeclareConverters.h  DeclareExecutors.h  Dispatcher.cxx  Executors.cxx  Executors.h  LowLevelViews.cxx  LowLevelViews.h  MarshalScalar.h  ProxyWrappers.cxx  PyCallable.h  PyException.cxx  PyStrings.cxx  PyStrings.h  Pythonize.cxx  TemplateProxy.cxx  TemplateProxy.h  TupleOfInstances.cxx  TypeHints.cxx  TypeHints.h  TypeManip.cxx  Utility.cxx  (+2 more)
